[package]
name = "ironbucket"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
bytes = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
md5 = "0.7"
hmac = "0.12"
sha2 = "0.10"

[[bin]]
name = "ironbucket"
path = "src/main.rs"